Resolving header alignment issues

--- a/index.css
+++ b/index.css
@@ -8,52 +8,52 @@
     height:100vh;
     width:100vw;
 }
-.heading_div{
-    background: #412C14;
-    padding: 15px 0px;
-}
-.saunders{
+/* Top Bar starts here */
+.top_bar{
+    padding:10px 0px;
+    background-color: #412C14;
+  }
+  .top_submenu{
+    margin-right:20px;
+  }
+  .line{
+  display: inline-block;
+  }
+  .line_div{
+    width:34%;
+    visibility: hidden;
+  }
+  .heading{
+    width:32%;
+    padding:15px;
+  }
+  .header_heading1{
     font-size: 53px;
-    color:#68B9D0;
-    display:flex;
-    justify-content: center;
-    letter-spacing: 12px;
-} 
-.second_heading{
-    font-size:1rem;
-    color:#68B9D0;
-    display:flex;
-    justify-content: center;
-    font-weight: 400;
-    letter-spacing: 3px;
-    padding:4.5px 0px ;
-    margin-right: 24.5%;
-}
-span{
-    display:flex;
-    justify-content: right;
-}
-input{
-    width: 34%;
-    font-size: 14px;
-    padding-left: 1%;
+  }
+  .input_div{
+      padding-left: 0;
+      vertical-align: top;
+      position: relative;
+      width: 30%;
+      padding: 68px 0px 0px 9px;
+  }
+  input{
+    height: 23px;
+    width:89%;
     background-color: #5A4738;
     border:none;
-}
-::placeholder {
-    color: rgb(191, 190, 190);
+    padding: 3.5px 3.5px 3.5px 5px;
+  }
+  ::placeholder{
+    color:rgb(157, 156, 156);
+  }
+  .fa-solid{
+    font-weight: 900;
+    color: rgb(199, 196, 196);
+    font-size: 14px;
   }
 
-  .fa-solid{
-    background: #5A4738;
-    padding-right: 10px;
-    color: rgb(191, 190, 190);
-  }
-  .fa-solid, .fas {
-    font-weight: 900;
-    display: flex;
-    align-items: center;
-}
+/* About div starts here */
 .about_div{
     padding-left:30%;
     background-color: #E8E8E8;
@@ -70,11 +70,9 @@ input{
 }
 
 /* navbar starts here------------------ */
-
 nav{
     background-color: #88C1D9;
     width:100%;
-    height:40px;
 }
 
 ul{
